# rsomics-edger-diff-splice

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs
tests/golden/: counts.tsv  expected_exon.tsv  expected_gene.tsv  expected_simes.tsv  genes.tsv  small_counts.tsv  small_design.tsv  small_expected_exon.tsv  small_expected_gene.tsv  small_expected_simes.tsv  small_genes.tsv
